[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/enemies/enemy_ship.png" type="Texture" id=1]
[ext_resource path="res://enemies/enemy_ship.gd" type="Script" id=2]
[ext_resource path="res://assets/enemies/enemy_ship_death.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "enemy"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.55973, 4.19419 )

[sub_resource type="Animation" id=3]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
gravity = Vector3( 40, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.921569, 0.419608, 0.435294, 1 )

[node name="enemy_ship" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 3 )
vframes = 4
frame = 3

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/enemy = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.491077, -0.0701542 )
shape = SubResource( 2 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/death = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -5.43692, 0.0350771 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.372048, 0.0496066 )
scale = Vector2( 0.352638, 0.414646 )

[node name="directionTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
autostart = true

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 3.04735, 0.0743256 )
scale = Vector2( 1, 8 )
amount = 4
process_material = SubResource( 4 )

[node name="screenTimer" type="Timer" parent="."]
wait_time = 100.0
one_shot = true
autostart = true
[connection signal="animation_finished" from="AnimationPlayer2" to="." method="_on_AnimationPlayer2_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="timeout" from="directionTimer" to="." method="_on_directionTimer_timeout"]
[connection signal="timeout" from="screenTimer" to="." method="_on_screenTimer_timeout"]
